--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <html>
 	<body>
 		<head>
-			<title>My web Server</title>
+			<title>La Chusma Selecta</title>
 		</head>
-		This is my super cool NodeJS based Web Server
+		Pronto volveré amor mío, bastara un escalofrío, cuando llege Septiembre
 		<img src="/chusmaselecta.jpg">
 	</body>
 </html>
